--- a/index.html
+++ b/index.html
@@ -7,9 +7,40 @@
   <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="hintergrund">
+<h1 class="ueberschrift">Sketchpad </h1>
   <div class="container"></div>
-  <script src="script.js"></script>
+  <button class="neues"> Change your grid size!</button>
+  <script> const cdiv = document.querySelector('.container');
+
+  // Add 16 divs
+  for (let i = 1; i < 257; i++) {
+    const div = document.createElement('div');
+    
+    cdiv.appendChild(div);
+    div.setAttribute('id', 'farbe')
+  }
+  // when the button is clicked, the grid size is changed
+  const button = document.querySelector('.neues');
+  button.addEventListener('click', function() {
+    const cdiv = document.querySelector('.container');
+    cdiv.innerHTML = '';
+    const input = prompt('Enter a number between 1 and 256');
+    for (let i = 1; i < input; i++) {
+      const div = document.createElement('div');
+      cdiv.appendChild(div);
+      div.setAttribute('id', 'farbe')
+    }
+   
+    }
+  
+    );
+
+  </script>
+
+
+
+
 </body>
 
 </html>
